forceupdate the ladder and fix the truncated summoner fullname issue

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,7 +1,7 @@
 .navbar-nav .nav-item:last-child {
    border-left: 1px solid silver;
    margin-left: 10px;
-   padding-left: 10px
+   padding-left: 10px;
 }
 
 @media (max-width: 991px) {
